--- a/package.json
+++ b/package.json
@@ -8,12 +8,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/chango": "^0.2.2",
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.4.1",
+    "date-fns": "^2.28.0",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-blur": "^11.0.0",
+    "expo-font": "~10.0.4",
+    "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
+    "nanoid": "^3.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-get-random-values": "^1.7.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-parallax-scroll-view": "^0.21.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-web": "0.17.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
